--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Chat</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="components/inputs/input.css">
+    <link rel="stylesheet" href="components/buttons/button.css">
     <script type="module" src="script.js"></script>
+    <link rel="shortcut icon" href="assets/icon-our-chat-removebg.png" type="image/x-icon">
 </head>
 
 <body>
@@ -14,15 +17,12 @@
 
     </header>
     <main>
-        <section>
-            <article id="boxLogin"> 
-                <button onclick="login()">Teste</button>
-            </article>
+        <section class="section-left">
+            <img src="assets/icon-our-chat-removebg.png" alt="">
         </section>
-        <section>
-            <figure>
-
-            </figure>
+        <section class="section-right">
+            <article class="box-login" id="boxLogin"> 
+            </article>
         </section>
     </main>
     <footer>
