--- a/index.html
+++ b/index.html
@@ -5,28 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Chat</title>
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="components/inputs/input.css">
     <link rel="stylesheet" href="components/buttons/button.css">
+    <link rel="stylesheet" href="components/alerts/alert.css">
+    <link rel="stylesheet" href="style.css">
     <script type="module" src="script.js"></script>
     <link rel="shortcut icon" href="assets/icon-our-chat-removebg.png" type="image/x-icon">
 </head>
 
-<body>
-    <header>
-
-    </header>
+<body id="body">
     <main>
         <section class="section-left">
-            <img src="assets/icon-our-chat-removebg.png" alt="">
+            <img class="home-our-chat" src="assets/icon-our-chat-removebg.png" alt="icone">
         </section>
         <section class="section-right">
-            <article class="box-login" id="boxLogin"> 
+            <article class="box-login" id="boxLogin">
+                <div class="box-login-title">
+                    <span class="login-title">Bem-vindo ao OurChat</span>
+                </div>
             </article>
         </section>
     </main>
-    <footer>
-
-    </footer>
 </body>
+
 </html>
