Meu deus meu senhor, me ajuda, por favor

--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Our Chat</title>
+    <link rel="shortcut icon" href="assets/icon-our-chat-removebg.png" type="image/x-icon">
+
     <link rel="stylesheet" href="components/inputs/input.css">
     <link rel="stylesheet" href="components/buttons/button.css">
     <link rel="stylesheet" href="components/alerts/alert.css">
     <link rel="stylesheet" href="style.css">
+
     <script type="module" src="script.js"></script>
-    <link rel="shortcut icon" href="assets/icon-our-chat-removebg.png" type="image/x-icon">
 </head>
 
 <body id="body">
     <main>
         <section class="section-left">
-            <img class="home-our-chat" src="assets/icon-our-chat-removebg.png" alt="icone">
+            <img class="home-our-chat" src="assets/icon-our-chat-removebg.png" alt="">
         </section>
         <section class="section-right">
             <article class="box-login" id="boxLogin">
